0.7.0 (29.03.2017)
================
* bugfixes
* add methods for `where` for vectors/matrices/lists
* less cryptic message about bad number of rows in `modify`/`modify_if`
* .N now is preferable to .n inside `modify` and etc.
* Functions for default dataset now invisibly return modified default dataset
* Fix logical arguments in boolean operations for criteria functions
* `%in_row%`/`%in_col%` are deprecated. Use `%row_in%`/`%col_in%` instead.
* NULL argument for criterion is removed. Use `not_na` instead.
* remove `default` argument in `ifs`. Use TRUE ~ default_value instead.
* add usual vectors functions additionally to infix versions.
* add 'do_repeat' function
* add functions for weighted statistics - 'w_mean', 'w_median', 'w_cor' and etc.
* add 'nest' function for creation nested tables.
* remove 'category', 'category_df' - use 'as.category' instead
* remove 'dichotomy', 'dichotomy1' - use 'dummy', 'dummy1' instead
* remove 'dichotomy_df', 'dichotomy_df1' - use 'as.dichotomy' instead
* remove labelled matrix support
* add 'datatable' for tables representation in Shiny
* add 'htmlTables' for tables representation in RStudio viewer and for knitting to html
* make value labels support in the base R and other packages (via 'factor' for class 'labelled')
* multiple/nested banners/variables suppport in 'cro_*'
* interface for creating sofisticated tables

0.5.5 (19.10.2016)
================
* numerous bugfixes
* change behavior of `if_val()` - now it dowsn't copies old values by default. There are 'other' and 'copy' instead of dots.
* add `%n_i%`, `%n_d%` - names intersection and diffs
* add `add_rows` function
* add `keep` and `except` functions for selecting/dropping columns in data.frames
* add 'where' for filtering dataset
* add `sort_asc` and `sort_desc` functions for sorting data.frames

0.5.1 (07.07.2016)
================
* initial release 
