@@ -71,6 +71,10 @@ S3method(do_repeat,data.frame)
 S3method(do_repeat,list)
 S3method(drop_empty_columns,data.frame)
 S3method(drop_empty_rows,data.frame)
+S3method(drop_unused_labels,category)
+S3method(drop_unused_labels,data.frame)
+S3method(drop_unused_labels,default)
+S3method(drop_unused_labels,list)
 S3method(dummy,data.frame)
 S3method(dummy,default)
 S3method(dummy,matrix)
@@ -153,10 +157,6 @@ S3method(sort_desc,data.frame)
 S3method(sort_desc,default)
 S3method(sort_desc,list)
 S3method(sort_desc,matrix)
-S3method(sort_table_asc,data.frame)
-S3method(sort_table_asc,intermeditate_table)
-S3method(sort_table_desc,data.frame)
-S3method(sort_table_desc,intermeditate_table)
 S3method(split_columns,data.frame)
 S3method(split_columns,intermeditate_table)
 S3method(split_columns,matrix)
@@ -172,6 +172,10 @@ S3method(tab_pivot,default)
 S3method(tab_pivot,intermediate_table)
 S3method(tab_rows,default)
 S3method(tab_rows,intermediate_table)
+S3method(tab_sort_asc,data.frame)
+S3method(tab_sort_asc,intermediate_table)
+S3method(tab_sort_desc,data.frame)
+S3method(tab_sort_desc,intermediate_table)
 S3method(tab_stat_cases,default)
 S3method(tab_stat_cases,intermediate_table)
 S3method(tab_stat_cpct,default)
@@ -188,6 +192,8 @@ S3method(tab_stat_tpct,default)
 S3method(tab_stat_tpct,intermediate_table)
 S3method(tab_subgroup,default)
 S3method(tab_subgroup,intermediate_table)
+S3method(tab_transpose,default)
+S3method(tab_transpose,intermediate_table)
 S3method(tab_weight,default)
 S3method(tab_weight,intermediate_table)
 S3method(to_labelled,default)
@@ -348,6 +354,7 @@ export(drop_empty_columns)
 export(drop_empty_rows)
 export(drop_r)
 export(drop_rc)
+export(drop_unused_labels)
 export(dtfrm)
 export(dummy)
 export(dummy1)
@@ -443,8 +450,6 @@ export(set_val_lab)
 export(set_var_lab)
 export(sort_asc)
 export(sort_desc)
-export(sort_table_asc)
-export(sort_table_desc)
 export(split_columns)
 export(split_labels)
 export(subst)
@@ -455,20 +460,28 @@ export(sum_row)
 export(sum_row_if)
 export(tab_cells)
 export(tab_cols)
-export(tab_format_sort_asc)
-export(tab_format_sort_desc)
 export(tab_format_split_columns)
 export(tab_intermediate_pivot)
 export(tab_pivot)
 export(tab_rows)
+export(tab_sort_asc)
+export(tab_sort_desc)
 export(tab_stat_cases)
 export(tab_stat_cpct)
 export(tab_stat_cpct_responses)
 export(tab_stat_fun)
 export(tab_stat_fun_df)
+export(tab_stat_mean)
+export(tab_stat_median)
 export(tab_stat_rpct)
+export(tab_stat_sd)
+export(tab_stat_se)
+export(tab_stat_sum)
 export(tab_stat_tpct)
+export(tab_stat_unweighted_valid_n)
+export(tab_stat_valid_n)
 export(tab_subgroup)
+export(tab_transpose)
 export(tab_weight)
 export(thru)
 export(to)
@@ -476,13 +489,14 @@ export(total)
 export(unlab)
 export(unvl)
 export(unvr)
-export(unweighted_n)
+export(unweighted_valid_n)
 export(v2l)
 export(v_diff)
 export(v_intersect)
 export(v_union)
 export(v_xor)
 export(val_lab)
+export(valid_n)
 export(values2labels)
 export(var_lab)
 export(vars)
