@@ -1,19 +1,13 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/sort_table.R
-\name{sort_table_asc}
-\alias{sort_table_asc}
-\alias{sort_table_desc}
-\alias{tab_format_sort_asc}
-\alias{tab_format_sort_desc}
+% Please edit documentation in R/tab_sort.R
+\name{tab_sort_asc}
+\alias{tab_sort_asc}
+\alias{tab_sort_desc}
 \title{Partially (inside blocks) sort tables/data.frames}
 \usage{
-sort_table_asc(x, columns = 2, excluded_rows = "#", na.last = FALSE)
+tab_sort_asc(x, columns = 2, excluded_rows = "#", na.last = FALSE)
 
-sort_table_desc(x, columns = 2, excluded_rows = "#", na.last = TRUE)
-
-tab_format_sort_asc(x, columns = 2, excluded_rows = "#", na.last = FALSE)
-
-tab_format_sort_desc(x, columns = 2, excluded_rows = "#", na.last = TRUE)
+tab_sort_desc(x, columns = 2, excluded_rows = "#", na.last = TRUE)
 }
 \arguments{
 \item{x}{data.frame}
@@ -38,7 +32,7 @@ removed.}
 sorted table('etable')/data.frame
 }
 \description{
-\code{sort_table_asc}/\code{sort_table_desc} sort tables (usually result of 
+\code{tab_sort_asc}/\code{tab_sort_desc} sort tables (usually result of 
 \link{cro}) in ascending/descending order between specified rows (by 
 default, it is row which contain '#' in the first column). There is no
 non-standard evaluation in these functions by design so use quotes for names
@@ -66,5 +60,5 @@ mtcars \%>\% calculate(cro_cpct(list(cyl, gear, carb), list("#total", vs, am)))
 # with sorting
 mtcars \%>\% 
     calculate(cro_cpct(list(cyl, gear, carb), list("#total", vs, am))) \%>\% 
-    sort_table_desc
+    tab_sort_desc
 }
