@@ -9,7 +9,8 @@
 \alias{w_mad}
 \alias{w_sum}
 \alias{w_n}
-\alias{unweighted_n}
+\alias{unweighted_valid_n}
+\alias{valid_n}
 \alias{w_cov}
 \alias{w_cor}
 \alias{w_pearson}
@@ -32,7 +33,9 @@ w_sum(x, weight = NULL, na.rm = TRUE)
 
 w_n(x, weight = NULL, na.rm = TRUE)
 
-unweighted_n(x, weight = NULL, na.rm = TRUE)
+unweighted_valid_n(x, weight = NULL)
+
+valid_n(x, weight = NULL)
 
 w_cov(x, weight = NULL, use = c("pairwise.complete.obs", "complete.obs"))
 
