@@ -20,8 +20,9 @@
 * add 'datatable' for tables representation in Shiny
 * add 'htmlTables' for tables representation in RStudio viewer and for knitting to html
 * make value labels support in the base R and other packages (via 'factor' for class 'labelled')
+* radically improved performace for 'cro_*' and 'fre_*' due to 'data.table' under the hood
 * multiple/nested banners/variables suppport in 'cro_*'
-* interface for creating sofisticated tables
+
 
 0.5.5 (19.10.2016)
 ================
